Implemented BinContext.ofCombinedStrategyMapper